[gd_scene load_steps=7 format=3 uid="uid://cmh23lcsgron6"]

[ext_resource type="Theme" uid="uid://c4eynk341nu50" path="res://theming/themes/main_menu_theme.tres" id="1_fdatn"]
[ext_resource type="Script" uid="uid://bixsw4871q4v0" path="res://scripts/main_menu/leaderboards.gd" id="1_m1v2b"]
[ext_resource type="Texture2D" uid="uid://be6gqblmdixgn" path="res://resources/biomes/forest/bg_forest.webp" id="1_pjn4p"]
[ext_resource type="Script" uid="uid://by7ubl72da02t" path="res://addons/dynamic_table/dynamic_table.gd" id="2_tmwms"]
[ext_resource type="AudioStream" uid="uid://cdhnicrpcjkiy" path="res://assets/audio/sounds/menu_select.wav" id="5_h3ryc"]

[sub_resource type="LabelSettings" id="LabelSettings_pjn4p"]
font_size = 28
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Leaderboards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fdatn")
script = ExtResource("1_m1v2b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pjn4p")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="TopLabel" type="Label" parent="CenterContainer/MainContainer"]
layout_mode = 2
text = "MENU_LIDERBOARDS"
label_settings = SubResource("LabelSettings_pjn4p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TableMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="DynamicTable" type="Control" parent="TableMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("2_tmwms")
default_minimum_column_width = 80.0
metadata/_custom_type_script = "uid://by7ubl72da02t"

[node name="BackButtonMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 43.0
offset_bottom = 36.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="BackButton" type="Button" parent="BackButtonMarginContainer" groups=["menu_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "BACK_BTN"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_h3ryc")

[node name="AvatarHTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="Overlay" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.109568
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="BackButtonMarginContainer/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="BackButtonMarginContainer/BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="BackButtonMarginContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="request_completed" from="AvatarHTTPRequest" to="." method="_on_avatar_http_request_request_completed"]
